# hs-bindings-sundials

./: .gitignore  bindings-sundials.cabal
src/Numeric/Sundials/: Cvode.hsc  Cvodes.hsc  Ida.hsc  Idas.hsc  Kinsol.hsc  NvectorSerial.hsc  SundialsConfig.hsc  SundialsNvector.hsc  SundialsTypes.hsc
