name:                bindings-sundials
version:             0.1.0.0
synopsis:            Bindings to the LLNL SUNDIALS integrator toolkit
description:
homepage:            https://github.com/peddie/hs-bindings-sundials
license:             BSD3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           (c) 2015 Matthew Peddie
category:            Numerical
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Sundials.Cvode
                     , Numeric.Sundials.Cvodes
                     , Numeric.Sundials.Ida
                     , Numeric.Sundials.Idas
                     , Numeric.Sundials.Kinsol
                     , Numeric.Sundials.NvectorSerial
                     , Numeric.Sundials.SundialsNvector
                     , Numeric.Sundials.SundialsTypes
                     , Numeric.Sundials.SundialsConfig
  extra-libraries:     sundials_cvode
                     , sundials_cvodes
                     , sundials_ida
                     , sundials_idas
                     , sundials_kinsol
                     , sundials_nvecserial
                     , sundials_nvecparallel
  default-extensions: ForeignFunctionInterface
  build-depends:       base >=4.8 && <4.9
                     , bindings-DSL
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
