name:                bindings-sundials
version:             0.1.0.0
synopsis:            Bindings to the LLNL SUNDIALS integrator toolkit
description:
homepage:            https://github.com/peddie/hs-bindings-sundials
bug-reports:         https://github.com/peddie/hs-bindings-sundials/issues
license:             BSD3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           (c) 2015 Matthew Peddie
category:            Numerical
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:           git
  location:       https://github.com/peddie/hs-bindings-sundials

library
  exposed-modules:     Numeric.Sundials.Cvode
                     , Numeric.Sundials.Cvodes
                     , Numeric.Sundials.Ida
                     , Numeric.Sundials.Idas
                     , Numeric.Sundials.Kinsol
                     , Numeric.Sundials.NvectorSerial
                     , Numeric.Sundials.SundialsNvector
                     , Numeric.Sundials.SundialsTypes
                     , Numeric.Sundials.SundialsConfig
  extra-libraries:     sundials_cvode
                     , sundials_cvodes
                     , sundials_ida
                     , sundials_idas
                     , sundials_kinsol
                     , sundials_nvecserial
                     , sundials_nvecparallel
  build-depends:       base >=4.7 && <4.9
                     , bindings-DSL
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
